[gd_scene load_steps=33 format=3 uid="uid://bcs1ywpmm1gi1"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_xc1aq"]
[ext_resource type="Script" uid="uid://s4y62gywquqy" path="res://addons/CustomControls/Dialogs/CommandEvents/manipulate_scene_dialog.gd" id="2_o8k28"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="3_jm3hd"]
[ext_resource type="PackedScene" uid="uid://1uibymv4bb3j" path="res://addons/CustomControls/custom_line_edit.tscn" id="4_cb4ea"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="4_unul8"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="5_cb4ea"]
[ext_resource type="Texture2D" uid="uid://bkfn4ru5noaaa" path="res://addons/CustomControls/Images/button1_background_disabled.png" id="5_o8k28"]
[ext_resource type="PackedScene" uid="uid://bwgf6rhx3a6cq" path="res://addons/CustomControls/custom_panel.tscn" id="5_x7h1x"]
[ext_resource type="Texture2D" uid="uid://dqnnp323vr1vo" path="res://addons/CustomControls/Images/button1_background_hover.png" id="6_cb4ea"]
[ext_resource type="Script" uid="uid://cs6g8remlafby" path="res://addons/CustomControls/smooth_scroll_container.gd" id="6_gmdkc"]
[ext_resource type="PackedScene" uid="uid://bealtmarqhbfs" path="res://addons/CustomControls/custom_option_button.tscn" id="7_7kcdm"]
[ext_resource type="Texture2D" uid="uid://beg6i1p118qd" path="res://addons/CustomControls/Images/button1_background_selected.png" id="7_x7h1x"]
[ext_resource type="Texture2D" uid="uid://xl88b63otgpi" path="res://addons/CustomControls/Images/button1_background.png" id="8_gmdkc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_u11f1"]

[sub_resource type="Gradient" id="Gradient_u5yrp"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6yyp3"]
gradient = SubResource("Gradient_u5yrp")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7h1x"]
atlas = ExtResource("5_cb4ea")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmdkc"]
atlas = ExtResource("5_cb4ea")
region = Rect2(216, 0, 24, 24)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0syc1"]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Gradient" id="Gradient_ctwx1"]
colors = PackedColorArray(0.286275, 0.301961, 0.309804, 1, 0.337255, 0.34902, 0.356863, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ol167"]
resource_local_to_scene = true
gradient = SubResource("Gradient_ctwx1")
fill_from = Vector2(0.542735, 0.995726)
fill_to = Vector2(0.58547, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eafc1"]
resource_local_to_scene = true
texture = SubResource("GradientTexture2D_ol167")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eejsc"]
resource_local_to_scene = true
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.113725, 0.133333, 0.160784, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Curve" id="Curve_aus22"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qiqap"]
texture = ExtResource("5_o8k28")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7qdgr"]
texture = ExtResource("6_cb4ea")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjylh"]
texture = ExtResource("7_x7h1x")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_subod"]
texture = ExtResource("8_gmdkc")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hfo07"]
texture = ExtResource("5_o8k28")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sujn"]
texture = ExtResource("6_cb4ea")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5stfh"]
texture = ExtResource("7_x7h1x")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maa40"]
texture = ExtResource("8_gmdkc")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="ManipulateSceneDialog" type="Window"]
title = "Mnipulate Scene"
position = Vector2i(0, 36)
size = Vector2i(503, 480)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_xc1aq")
script = ExtResource("2_o8k28")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("CanvasItemMaterial_u11f1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6yyp3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Scene ID: "

[node name="SceneID" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_jm3hd")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "ID of the scene to be manipulated"
min_value = 1.0
value = 1.0
rounded = true
allow_greater = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Func Name: "

[node name="FuncName" parent="MarginContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_cb4ea")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Name of a valid function in that scene."

[node name="Wait" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
tooltip_text = "Wait for the function to finish before continuing."
mouse_default_cursor_shape = 2
text = "wait? "

[node name="HBoxContainer4" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Params: "

[node name="Info" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer4/Label"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
tooltip_text = "[title]Param List[/title]  
This list of parameters will be passed to the function in the order in which they appear here."
mouse_default_cursor_shape = 16
texture_normal = SubResource("AtlasTexture_x7h1x")
texture_hover = SubResource("AtlasTexture_gmdkc")

[node name="ParamListMainContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("5_x7h1x")]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_0syc1")
style1 = SubResource("StyleBoxFlat_0syc1")
style2 = SubResource("StyleBoxTexture_eafc1")
style3 = SubResource("StyleBoxFlat_eejsc")

[node name="SmoothScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/ParamListMainContainer"]
layout_mode = 2
script = ExtResource("6_gmdkc")
curve = SubResource("Curve_aus22")
metadata/_custom_type_script = "uid://cs6g8remlafby"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/ParamListMainContainer/SmoothScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ParamsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4/ParamListMainContainer/SmoothScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddParameterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/AddParameterContainer"]
layout_mode = 2
text = "Type:"

[node name="ParameterType" parent="MarginContainer/VBoxContainer/HBoxContainer4/AddParameterContainer" instance=ExtResource("7_7kcdm")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Type of parameter you want to insert"
selected = 0
item_count = 6
popup/item_0/text = "Number"
popup/item_0/id = 0
popup/item_1/text = "String"
popup/item_1/id = 1
popup/item_2/text = "Bool"
popup/item_2/id = 2
popup/item_3/text = "Switch"
popup/item_3/id = 3
popup/item_4/text = "Numeric Variable"
popup/item_4/id = 4
popup/item_5/text = "Text Variable"
popup/item_5/id = 5

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/AddParameterContainer"]
layout_mode = 2
text = "Name:"

[node name="ParamName" parent="MarginContainer/VBoxContainer/HBoxContainer4/AddParameterContainer" instance=ExtResource("4_cb4ea")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Descriptive name for that parameter.

[Note]: Leave blank for autofill"

[node name="CreateParam" parent="MarginContainer/VBoxContainer/HBoxContainer4/AddParameterContainer" instance=ExtResource("4_unul8")]
layout_mode = 2
tooltip_text = "Create a new parameter at the end of the list"
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
text = "Create"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_unul8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
theme_override_styles/disabled = SubResource("StyleBoxTexture_qiqap")
theme_override_styles/hover = SubResource("StyleBoxTexture_7qdgr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjylh")
theme_override_styles/normal = SubResource("StyleBoxTexture_subod")
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_unul8")]
unique_name_in_owner = true
custom_minimum_size = Vector2(210, 0)
layout_mode = 2
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
theme_override_styles/disabled = SubResource("StyleBoxTexture_hfo07")
theme_override_styles/hover = SubResource("StyleBoxTexture_4sujn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5stfh")
theme_override_styles/normal = SubResource("StyleBoxTexture_maa40")
text = "CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer4/AddParameterContainer/CreateParam" to="." method="_on_create_param_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
